<project xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
        http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <description>NFSv4.1/pNFS community</description>

    <groupId>org.dcache</groupId>
    <artifactId>pnfs-community</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>NFSv4.1/pNFS community for testing and technology preview</name>
    <packaging>jar</packaging>

    <url>http://www.dCache.ORG</url>

    <scm>
        <connection>scm:git:https://github.com/kofemann/pnfs-community.git</connection>
        <developerConnection>scm:git:https://github.com/kofemann/pnfs-community.git</developerConnection>
    </scm>

    <!--
      CODE LICENSE
    -->
    <licenses>
        <license>
            <name>
                GNU Lesser General Public License
            </name>
            <url>
                http://www.fsf.org/licensing/licenses/lgpl.txt
            </url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <version.hazelcast>5.3.7</version.hazelcast>
        <version.curator>5.1.0</version.curator>
        <version.grpc>1.54.2</version.grpc>
        <spring-integration-kafka.version>5.5.11</spring-integration-kafka.version>
        <spring-kafka.version>2.9.11</spring-kafka.version>
        <kafka.version>3.1.0</kafka.version>
        <slf4j.version>1.7.30</slf4j.version>
        <ayza.version>10.0.0</ayza.version>
        <spring-context.version>5.3.27</spring-context.version>
        <metrics.version>4.0.6</metrics.version>
    </properties>

    <build>

        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.7.1</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.gaul</groupId>
                <artifactId>modernizer-maven-plugin</artifactId>
                <version>2.7.0</version>
                <configuration>
                    <javaVersion>${java.version}</javaVersion>
                    <failOnViolations>false</failOnViolations>
                </configuration>
                <executions>
                    <execution>
                        <id>modernizer</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>modernizer</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <executable>/usr/lib/jvm/java-17/bin/javac</executable>
                    <showDeprecation>true</showDeprecation>
                    <encoding>UTF-8</encoding>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>io.fabric8</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>0.44.0</version>
                <configuration>
                    <images>
                        <image>
                            <name>%g/pnfs-community:%l</name>
                            <build>
                                <dockerFile>${project.basedir}/src/main/docker/Dockerfile</dockerFile>
                                <assembly>
                                    <descriptorRef>artifact-with-dependencies</descriptorRef>
                                </assembly>
                            </build>
                        </image>
                    </images>
                </configuration>
                <executions>
                    <execution>
                        <id>build</id>
                        <phase>install</phase>
                        <goals>
                            <goal>build</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.xolstice.maven.plugins</groupId>
                <artifactId>protobuf-maven-plugin</artifactId>
                <version>0.6.1</version>
                <configuration>
                    <protocArtifact>com.google.protobuf:protoc:3.10.0:exe:${os.detected.classifier}</protocArtifact>
                    <pluginId>grpc-java</pluginId>
                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${version.grpc}:exe:${os.detected.classifier}</pluginArtifact>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>compile-custom</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/*Test.class</include>
                        <include>**/*Tests.class</include>
                    </includes>
                    <!-- dCache uses the singleton anti-pattern in way
                         too many places. That unfortunately means we have
                         to accept the overhead of forking each test run. -->
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <!-- Make Powermock compatible with JDK 17 -->
                    <argLine>
                        @{argLine}
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens java.base/java.time=ALL-UNNAMED
                        --add-opens java.base/java.time.format=ALL-UNNAMED
                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens java.base/java.util.stream=ALL-UNNAMED
                        --add-opens java.base/java.net=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <!--
      EXTERNAL DEPENDENCIES
    -->

    <dependencies>
        <dependency>
            <groupId>org.dcache.chimera</groupId>
            <artifactId>chimera-core</artifactId>
            <version>3.2.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.23.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.mattbertolini</groupId>
            <artifactId>liquibase-slf4j</artifactId>
            <version>2.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.3</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>log4j-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.13</version>
        </dependency>
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
            <version>4.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.dcache</groupId>
            <artifactId>oncrpc4j-spring</artifactId>
            <version>3.3.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-simple</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--
            LOCAL JARS
        -->

        <dependency>
            <groupId>org.dcache</groupId>
            <artifactId>nfs4j-spring</artifactId>
            <version>0.25.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.zookeeper</groupId>
            <artifactId>zookeeper</artifactId>
            <version>3.8.4</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.curator</groupId>
            <artifactId>curator-framework</artifactId>
            <version>${version.curator}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.curator</groupId>
            <artifactId>curator-recipes</artifactId>
            <version>${version.curator}</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>

        <dependency>
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast</artifactId>
            <version>${version.hazelcast}</version>
        </dependency>
        <dependency>
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast-spring</artifactId>
            <version>${version.hazelcast}</version>
        </dependency>

        <!-- spring-integration -->
        <dependency>
            <groupId>org.springframework.integration</groupId>
            <artifactId>spring-integration-kafka</artifactId>
            <version>${spring-integration-kafka.version}</version>
        </dependency>
        <!-- spring-kafka -->
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
            </exclusions>
            <version>${spring-kafka.version}</version>
        </dependency>

        <dependency>
          <groupId>org.conscrypt</groupId>
          <artifactId>conscrypt-openjdk-uber</artifactId>
          <version>2.5.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka_2.12</artifactId>
            <version>${kafka.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.zookeeper</groupId>
                    <artifactId>zookeeper</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
            <version>${kafka.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>io.dropwizard.metrics</groupId>
            <artifactId>metrics-core</artifactId>
            <version>${metrics.version}</version>
        </dependency>

        <dependency>
            <groupId>io.dropwizard.metrics</groupId>
            <artifactId>metrics-jmx</artifactId>
            <version>${metrics.version}</version>
        </dependency>

        <!-- enforce Java11 compliant version -->
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>

        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-netty-shaded</artifactId>
            <version>${version.grpc}</version>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-protobuf</artifactId>
            <version>${version.grpc}</version>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-stub</artifactId>
            <version>${version.grpc}</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-tcnative-boringssl-static</artifactId>
            <version>2.0.59.Final</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring-context.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.hakky54</groupId>
            <artifactId>ayza</artifactId>
            <version>${ayza.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.hakky54</groupId>
            <artifactId>ayza-for-pem</artifactId>
            <version>${ayza.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.0.0-jre</version>
        </dependency>
    </dependencies>

    <!--
      MAVEN REPOSITORIES
    -->
    <repositories>
        <repository>
            <id>maven2-repository.dcache.org</id>
            <name>dCache.ORG Repository for Maven</name>
            <url>https://download.dcache.org/nexus/content/groups/public/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>dcache-snapshots</id>
            <name>dCache.ORG snapshots repository</name>
            <url>https://download.dcache.org/nexus/content/repositories/snapshots</url>
            <layout>default</layout>
        </repository>
    </repositories>

    <!--
                 MAVEN DEPLOYMENT REPOSITORY
    -->
    <distributionManagement>
        <repository>
            <id>dcache.org</id>
            <url>https://download.dcache.org/nexus/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>dcache.org-snapshot</id>
            <url>https://download.dcache.org/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
